Fix header spacing on smaller mobile devices.

--- a/styles/shrekjr.styl
+++ b/styles/shrekjr.styl
@@ -32,7 +32,7 @@ nav
         flex-direction: row
         justify-content: center
         align-items: center
-        padding: 4px 8px 4px 0
+        padding: 4px 0
         height: 48px
         img
             height: 24px
